xterm (321-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Run lynx with the -display_charset=utf-8 option when dumping the text
    version of the XTerm FAQ, making the build reproducible.

 -- Sven Joachim <svenjoac@gmx.de>  Sun, 20 Dec 2015 12:09:26 +0100

xterm (320-1) unstable; urgency=medium

  * New upstream release.
    - Amend fix for bug #794201 (report forwarded from Christian Jachmann
      by Emanuel Haupt, Closes: #797008).

 -- Sven Joachim <svenjoac@gmx.de>  Sat, 29 Aug 2015 13:47:23 +0200

xterm (319-1) unstable; urgency=low

  * New upstream release.
    - Correct combination of -ls and -e options for utempter configuration
      (Closes: #794201).
  * Update copy of XTerm FAQ to revision 1.305 (dated 2015/05/01).

 -- Sven Joachim <svenjoac@gmx.de>  Sat, 22 Aug 2015 09:10:05 +0200

xterm (318-2) unstable; urgency=low

  * Upload to unstable.

 -- Sven Joachim <svenjoac@gmx.de>  Sun, 26 Apr 2015 15:32:00 +0200

xterm (318-1) experimental; urgency=low

  * New upstream release.

 -- Sven Joachim <svenjoac@gmx.de>  Wed, 15 Apr 2015 17:33:16 +0200

xterm (317-1) experimental; urgency=low

  * New upstream release.
    - Adapt example for exec-formatted from Lukáš Zapletal's webpage
      to manual (Closes: #780008).
    - Add a short usage section to the xterm manual, including notes
      on setting the window title (Closes: #742477).

 -- Sven Joachim <svenjoac@gmx.de>  Tue, 31 Mar 2015 17:50:42 +0200

xterm (316-1) experimental; urgency=low

  * New upstream release.
    - Add configure option --enable-initial-erase to set ptyInitialErase
      consistently with manpage, as well as adding a table in manpage to
      clarify the relationship between the resources related to the
      backarrow key (Closes: #775952).
  * Refresh Debian patches.
  * Update years in debian/copyright.
  * Update copy of XTerm FAQ to revision 1.293 (dated 2015/02/16).

 -- Sven Joachim <svenjoac@gmx.de>  Sun, 08 Mar 2015 19:17:29 +0100
